change newHtmlFile only for feature2 branch

--- a/newHtmlFile.html
+++ b/newHtmlFile.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>New html file for learnig GitHub</h1>
+    <p>This paragraph will only add to feature2 (branch)</p>
   </body>
 </html>
