--- a/newHtmlFile.html
+++ b/newHtmlFile.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>New html file for learnig GitHub</h1>
-    <p>This paragraph will only add to feature2 (branch)</p>
+    <p>this tag will only appear in feature2 branch in GitHub</p>
   </body>
 </html>
