--- a/newHtmlFile.html
+++ b/newHtmlFile.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>New html file for learnig GitHub</h1>
+    <h2>this is heading 2</h2>
     <p>this tag will only appear in feature2 branch in GitHub</p>
   </body>
 </html>
