--- a/newHtmlFile.html
+++ b/newHtmlFile.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>New html file for learnig GitHub</h1>
-    <h2>this is heading 2</h2>
+    <h3>this is h3</h3>
+    <p>feature2</p>
     <p>this tag will only appear in feature2 branch in GitHub</p>
   </body>
 </html>
