commit with Ahmer name in main

--- a/newHtmlFile.html
+++ b/newHtmlFile.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>New html file for learnig GitHub</h1>
-    <h3>this is h3</h3>
+    <h3>this is h3 (Ahmer)</h3>
     <p>feature2</p>
     <p>this tag will only appear in feature2 branch in GitHub</p>
   </body>
